guava nuget version fix

--- a/config.json
+++ b/config.json
@@ -3892,7 +3892,7 @@
         "groupId": "com.google.guava",
         "artifactId": "guava",
         "version": "33.4.0-android",
-        "nugetVersion": "33.4.0-android",
+        "nugetVersion": "33.4.0",
         "nugetId": "Xamarin.Google.Guava",
         "excludedRuntimeDependencies": "com.google.guava.listenablefuture",
         "type": "androidlibrary",
