--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -325,7 +325,10 @@
     <AndroidNamespaceReplacement Include='mlkit' Replacement='MLKit' />
     <AndroidNamespaceReplacement Include='opengl' Replacement='OpenGL' />
     <AndroidNamespaceReplacement Include='org.jspecify.annotations' Replacement='Xamarin.JSpecify.Annotations' />
-    <AndroidNamespaceReplacement Include='signalgeneration' Replacement='SignalGeneration' />    
+    <AndroidNamespaceReplacement Include='signalgeneration' Replacement='SignalGeneration' />
+
+    <AndroidNamespaceReplacement Include='com.google.ai.edge.litert' Replacement='Xamarin.Google.AI.Edge.LiteRT' />
+
   </ItemGroup>
 
 </Project>
