Updates needed to build on `net9.0-android` RTM. (#1021)
Changes needed to build on `net9.0-android` RTM. These should be safe to commit for `net8.0-android` as well without affecting anything.

Each change should have a comment explaining its purpose.

This adds the "Run on .NET next preview" option that can be selected when kicking off a new CI build.

Selecting this will run the CI build on .NET 9.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,6 +89,7 @@ extends:
           name: $(windowsAgentPoolName)
           image: $(windowsImage)
           os: windows
+        runDotnetNextTest: ${{ parameters.RunDotnetNextTest }}
 
     - template: build/ci/stage-extended-tests.yml@self
       parameters:
@@ -97,5 +98,6 @@ extends:
           name: $(windowsAgentPoolName)
           image: $(windowsImage)
           os: windows
+        runDotnetNextTest: ${{ parameters.RunDotnetNextTest }}
 
     - template: build/ci/stage-sign-artifacts.yml@self
