--- a/tests/common/NuGet.config
+++ b/tests/common/NuGet.config
@@ -26,11 +26,13 @@
             <package pattern="Microsoft.AspNetCore.*" />
             <package pattern="Microsoft.Extensions.*" />
             <package pattern="Microsoft.Graphics.*" />
+            <package pattern="Microsoft.IO.*" />
             <package pattern="Microsoft.iOS.*" />
             <package pattern="Microsoft.MacCatalyst.*" />
             <package pattern="Microsoft.Maui.*" />
             <package pattern="Microsoft.NET.*" />
             <package pattern="Microsoft.NETCore.*" />
+            <package pattern="Microsoft.Web.*" />
             <package pattern="Microsoft.Windows.*" />
             <package pattern="Microsoft.WindowsAppSDK" />
             <package pattern="Microsoft.WindowsDesktop.*" />
