nuget name fixes

--- a/config.json
+++ b/config.json
@@ -2025,7 +2025,7 @@
         "artifactId": "work-multiprocess",
         "version": "2.10.0",
         "nugetVersion": "2.10.0.2",
-        "nugetId": "Xamarin.AndroidX.Work.Work.Multiprocess"
+        "nugetId": "Xamarin.AndroidX.Work.Multiprocess"
       },
       {
         "groupId": "androidx.work",
@@ -2046,14 +2046,14 @@
         "artifactId": "work-rxjava2",
         "version": "2.10.0",
         "nugetVersion": "2.10.0.2",
-        "nugetId": "Xamarin.AndroidX.Work.Work.RxJava2"
+        "nugetId": "Xamarin.AndroidX.Work.RxJava2"
       },
       {
         "groupId": "androidx.work",
         "artifactId": "work-rxjava3",
         "version": "2.10.0",
         "nugetVersion": "2.10.0.2",
-        "nugetId": "Xamarin.AndroidX.Work.Work.RxJava3"
+        "nugetId": "Xamarin.AndroidX.Work.RxJava3"
       },
       {
         "groupId": "aopalliance",
