--- a/cgmanifest.json
+++ b/cgmanifest.json
@@ -3726,7 +3726,7 @@
           "artifactId": "work-multiprocess",
           "groupId": "androidx.work",
           "version": "2.10.0",
-          "nuGetId": "Xamarin.AndroidX.Work.Work.Multiprocess",
+          "nuGetId": "Xamarin.AndroidX.Work.Multiprocess",
           "nuGetVersion": "2.10.0.2"
         }
       },
@@ -3765,7 +3765,7 @@
           "artifactId": "work-rxjava2",
           "groupId": "androidx.work",
           "version": "2.10.0",
-          "nuGetId": "Xamarin.AndroidX.Work.Work.RxJava2",
+          "nuGetId": "Xamarin.AndroidX.Work.RxJava2",
           "nuGetVersion": "2.10.0.2"
         }
       },
@@ -3778,7 +3778,7 @@
           "artifactId": "work-rxjava3",
           "groupId": "androidx.work",
           "version": "2.10.0",
-          "nuGetId": "Xamarin.AndroidX.Work.Work.RxJava3",
+          "nuGetId": "Xamarin.AndroidX.Work.RxJava3",
           "nuGetVersion": "2.10.0.2"
         }
       },
