--- a/config.json
+++ b/config.json
@@ -2910,6 +2910,7 @@
         "version": "16.1.0",
         "nugetVersion": "116.1.0",
         "nugetId": "Xamarin.GooglePlayServices.RecaptchaBase",
+        "allowPrereleaseDependencies": true,
         "type": "xbd"
       },
       {
@@ -3226,6 +3227,7 @@
         "version": "18.7.0",
         "nugetVersion": "18.7.0",
         "nugetId": "Xamarin.Google.Android.Recaptcha",
+        "allowPrereleaseDependencies": true,
         "type": "xbd"
       },
       {
@@ -5156,15 +5158,6 @@
         "comments": "Depends on Xamarin.Google.Android.ODML.Image which only has a prerelease version."
       },
       {
-        "groupId": "androidx.emoji2",
-        "artifactId": "emoji2",
-        "version": "1.2.0",
-        "nugetVersion": "1.2.0.2",
-        "nugetId": "Xamarin.AndroidX.Emoji2",
-        "dependencyOnly": true,
-        "comments": "Required by 'androidx.emoji2.emoji2-emojipicker:1.5.0'"
-      },
-      {
         "groupId": "androidx.security",
         "artifactId": "security-crypto",
         "version": "1.1.0-alpha06",
@@ -5172,6 +5165,15 @@
         "nugetId": "Xamarin.AndroidX.Security.SecurityCrypto",
         "dependencyOnly": true,
         "comments": "Required by 'com.google.android.recaptcha:recaptcha:18.7.0'"
+      },
+      {
+        "groupId": "androidx.emoji2",
+        "artifactId": "emoji2",
+        "version": "1.2.0",
+        "nugetVersion": "1.2.0.2",
+        "nugetId": "Xamarin.AndroidX.Emoji2",
+        "dependencyOnly": true,
+        "comments": "Required by 'androidx.emoji2.emoji2-emojipicker:1.5.0'"
       },
       {
         "groupId": "androidx.wear.tiles",
