--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -326,6 +326,7 @@
     <AndroidNamespaceReplacement Include='opengl' Replacement='OpenGL' />
     <AndroidNamespaceReplacement Include='org.jspecify.annotations' Replacement='Xamarin.JSpecify.Annotations' />
     <AndroidNamespaceReplacement Include='signalgeneration' Replacement='SignalGeneration' />
+    <AndroidNamespaceReplacement Include='recaptchabase' Replacement='RecaptchaBase' />
 
   </ItemGroup>
 
