--- a/cgmanifest.json
+++ b/cgmanifest.json
@@ -4110,9 +4110,9 @@
         "maven": {
           "artifactId": "litert",
           "groupId": "com.google.ai.edge.litert",
-          "version": "1.0.1",
+          "version": "1.1.0",
           "nuGetId": "Xamarin.Google.AI.Edge.LiteRT",
-          "nuGetVersion": "1.0.1.1"
+          "nuGetVersion": "1.1.0"
         }
       }
     },
@@ -4122,9 +4122,9 @@
         "maven": {
           "artifactId": "litert-api",
           "groupId": "com.google.ai.edge.litert",
-          "version": "1.0.1",
+          "version": "1.1.0",
           "nuGetId": "Xamarin.Google.AI.Edge.LiteRT.API",
-          "nuGetVersion": "1.0.1.1"
+          "nuGetVersion": "1.1.0"
         }
       }
     },
@@ -4134,9 +4134,9 @@
         "maven": {
           "artifactId": "litert-gpu",
           "groupId": "com.google.ai.edge.litert",
-          "version": "1.0.1",
+          "version": "1.1.0",
           "nuGetId": "Xamarin.Google.AI.Edge.LiteRT.GPU",
-          "nuGetVersion": "1.0.1.1"
+          "nuGetVersion": "1.1.0"
         }
       }
     },
@@ -4146,9 +4146,9 @@
         "maven": {
           "artifactId": "litert-gpu-api",
           "groupId": "com.google.ai.edge.litert",
-          "version": "1.0.1",
+          "version": "1.1.0",
           "nuGetId": "Xamarin.Google.AI.Edge.LiteRT.GPU.API",
-          "nuGetVersion": "1.0.1.1"
+          "nuGetVersion": "1.1.0"
         }
       }
     },
@@ -4158,9 +4158,9 @@
         "maven": {
           "artifactId": "litert-metadata",
           "groupId": "com.google.ai.edge.litert",
-          "version": "1.0.1",
+          "version": "1.1.0",
           "nuGetId": "Xamarin.Google.AI.Edge.LiteRT.Metadata",
-          "nuGetVersion": "1.0.1.1"
+          "nuGetVersion": "1.1.0"
         }
       }
     },
@@ -4170,9 +4170,9 @@
         "maven": {
           "artifactId": "litert-support",
           "groupId": "com.google.ai.edge.litert",
-          "version": "1.0.1",
+          "version": "1.1.0",
           "nuGetId": "Xamarin.Google.AI.Edge.LiteRT.Support",
-          "nuGetVersion": "1.0.1.1"
+          "nuGetVersion": "1.1.0"
         }
       }
     },
@@ -4182,9 +4182,9 @@
         "maven": {
           "artifactId": "litert-support-api",
           "groupId": "com.google.ai.edge.litert",
-          "version": "1.0.1",
+          "version": "1.1.0",
           "nuGetId": "Xamarin.Google.AI.Edge.LiteRT.Support.API",
-          "nuGetVersion": "1.0.1.1"
+          "nuGetVersion": "1.1.0"
         }
       }
     },
@@ -5115,6 +5115,19 @@
       "component": {
         "type": "maven",
         "maven": {
+          "artifactId": "play-services-recaptchabase",
+          "groupId": "com.google.android.gms",
+          "version": "16.1.0",
+          "nuGetId": "Xamarin.GooglePlayServices.RecaptchaBase",
+          "nuGetVersion": "116.1.0"
+        }
+      },
+      "license": "Android Software Development Kit License"
+    },
+    {
+      "component": {
+        "type": "maven",
+        "maven": {
           "artifactId": "play-services-safetynet",
           "groupId": "com.google.android.gms",
           "version": "18.1.0",
@@ -5610,9 +5623,9 @@
         "maven": {
           "artifactId": "recaptcha",
           "groupId": "com.google.android.recaptcha",
-          "version": "18.6.1",
+          "version": "18.7.0",
           "nuGetId": "Xamarin.Google.Android.Recaptcha",
-          "nuGetVersion": "18.6.1.2"
+          "nuGetVersion": "18.7.0"
         }
       }
     },
@@ -5931,9 +5944,9 @@
         "maven": {
           "artifactId": "firebase-auth",
           "groupId": "com.google.firebase",
-          "version": "23.1.0",
+          "version": "23.2.0",
           "nuGetId": "Xamarin.Firebase.Auth",
-          "nuGetVersion": "123.1.0.2"
+          "nuGetVersion": "123.2.0"
         }
       },
       "license": "The Apache Software License, Version 2.0"
@@ -5957,9 +5970,9 @@
         "maven": {
           "artifactId": "firebase-auth-ktx",
           "groupId": "com.google.firebase",
-          "version": "23.1.0",
+          "version": "23.2.0",
           "nuGetId": "Xamarin.Firebase.Auth.Ktx",
-          "nuGetVersion": "123.1.0.2"
+          "nuGetVersion": "123.2.0"
         }
       },
       "license": "The Apache Software License, Version 2.0"
@@ -6243,9 +6256,9 @@
         "maven": {
           "artifactId": "firebase-firestore",
           "groupId": "com.google.firebase",
-          "version": "25.1.1",
+          "version": "25.1.2",
           "nuGetId": "Xamarin.Firebase.Firestore",
-          "nuGetVersion": "125.1.1.2"
+          "nuGetVersion": "125.1.2"
         }
       },
       "license": "The Apache Software License, Version 2.0"
@@ -6256,9 +6269,9 @@
         "maven": {
           "artifactId": "firebase-firestore-ktx",
           "groupId": "com.google.firebase",
-          "version": "25.1.1",
+          "version": "25.1.2",
           "nuGetId": "Xamarin.Firebase.Firestore.Ktx",
-          "nuGetVersion": "125.1.1.2"
+          "nuGetVersion": "125.1.2"
         }
       },
       "license": "The Apache Software License, Version 2.0"
@@ -7848,9 +7861,9 @@
         "maven": {
           "artifactId": "checker-qual",
           "groupId": "org.checkerframework",
-          "version": "3.48.4",
+          "version": "3.49.0",
           "nuGetId": "Xamarin.CheckerFramework.CheckerQual",
-          "nuGetVersion": "3.48.4.1"
+          "nuGetVersion": "3.49.0"
         }
       },
       "license": "MIT"
