--- a/config.json
+++ b/config.json
@@ -4926,7 +4926,7 @@
         "groupId": "org.jetbrains.kotlinx",
         "artifactId": "kotlinx-serialization-core",
         "version": "1.7.3",
-        "nugetVersion": "1.7.3.2",
+        "nugetVersion": "1.7.3.3",
         "nugetId": "Xamarin.KotlinX.Serialization.Core",
         "type": "androidlibrary",
         "mavenRepositoryType": "MavenCentral"
@@ -4935,8 +4935,26 @@
         "groupId": "org.jetbrains.kotlinx",
         "artifactId": "kotlinx-serialization-core-jvm",
         "version": "1.7.3",
-        "nugetVersion": "1.7.3.2",
+        "nugetVersion": "1.7.3.3",
         "nugetId": "Xamarin.KotlinX.Serialization.Core.Jvm",
+        "type": "androidlibrary",
+        "mavenRepositoryType": "MavenCentral"
+      },
+      {
+        "groupId": "org.jetbrains.kotlinx",
+        "artifactId": "kotlinx-serialization-json",
+        "version": "1.7.3",
+        "nugetVersion": "1.7.3.3",
+        "nugetId": "Xamarin.KotlinX.Serialization.Json",
+        "type": "androidlibrary",
+        "mavenRepositoryType": "MavenCentral"
+      },
+      {
+        "groupId": "org.jetbrains.kotlinx",
+        "artifactId": "kotlinx-serialization-json-jvm",
+        "version": "1.7.3",
+        "nugetVersion": "1.7.3.3",
+        "nugetId": "Xamarin.KotlinX.Serialization.Json.Jvm",
         "type": "androidlibrary",
         "mavenRepositoryType": "MavenCentral"
       },
@@ -4944,7 +4962,7 @@
         "groupId": "org.jetbrains.kotlinx",
         "artifactId": "kotlinx-serialization-protobuf",
         "version": "1.7.3",
-        "nugetVersion": "1.7.3.2",
+        "nugetVersion": "1.7.3.3",
         "nugetId": "Xamarin.KotlinX.Serialization.Protobuf",
         "type": "androidlibrary",
         "mavenRepositoryType": "MavenCentral"
@@ -4953,7 +4971,7 @@
         "groupId": "org.jetbrains.kotlinx",
         "artifactId": "kotlinx-serialization-protobuf-jvm",
         "version": "1.7.3",
-        "nugetVersion": "1.7.3.2",
+        "nugetVersion": "1.7.3.3",
         "nugetId": "Xamarin.KotlinX.Serialization.Protobuf.Jvm",
         "type": "androidlibrary",
         "mavenRepositoryType": "MavenCentral"
