--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -332,6 +332,7 @@
     <AndroidNamespaceReplacement Include='org.jspecify.annotations' Replacement='Xamarin.JSpecify.Annotations' />
     <AndroidNamespaceReplacement Include='signalgeneration' Replacement='SignalGeneration' />
     <AndroidNamespaceReplacement Include='recaptchabase' Replacement='RecaptchaBase' />
+    <AndroidNamespaceReplacement Include='viewtree' Replacement='ViewTree' />
 
   </ItemGroup>
 
