[ci] Support building on dnceng-public (#1105)
New PR build pipeline: https://dev.azure.com/dnceng-public/public/_build?definitionId=305

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,12 +26,6 @@ parameters:
 variables:
   # Variables used by both AndroidX/GPS go in the template
   - template: build/ci/variables.yml@self
-  
-  # Variables only used by AndroidX go here
-  - name: skipUnitTests
-    value: false
-  - name: skipSamplesTests
-    value: true
 
 resources:
   repositories:
@@ -70,7 +64,7 @@ extends:
 
     - stage: build_mac
       displayName: Build - Mac
-      dependsOn:
+      dependsOn: []
       
       jobs:
       - template: build/ci/build.yml@self
