--- a/config.json
+++ b/config.json
@@ -2371,8 +2371,8 @@
       {
         "groupId": "com.google.android.gms",
         "artifactId": "play-services-ads",
-        "version": "24.1.0",
-        "nugetVersion": "124.1.0",
+        "version": "24.0.0",
+        "nugetVersion": "124.0.0",
         "nugetId": "Xamarin.GooglePlayServices.Ads",
         "allowPrereleaseDependencies": true,
         "extraDependencies": "androidx.lifecycle.lifecycle-livedata-core,androidx.lifecycle.lifecycle-runtime",
@@ -2381,8 +2381,8 @@
       {
         "groupId": "com.google.android.gms",
         "artifactId": "play-services-ads-base",
-        "version": "24.1.0",
-        "nugetVersion": "124.1.0",
+        "version": "24.0.0",
+        "nugetVersion": "124.0.0",
         "nugetId": "Xamarin.GooglePlayServices.Ads.Base",
         "type": "xbd"
       },
@@ -2657,6 +2657,14 @@
         "version": "18.1.0",
         "nugetVersion": "118.1.0.4",
         "nugetId": "Xamarin.GooglePlayServices.Identity",
+        "type": "xbd"
+      },
+      {
+        "groupId": "com.google.android.gms",
+        "artifactId": "play-services-identity-credentials",
+        "version": "16.0.0-alpha04",
+        "nugetVersion": "116.0.0",
+        "nugetId": "Xamarin.GooglePlayServices.Identity.Credentials",
         "type": "xbd"
       },
       {
@@ -4018,7 +4026,7 @@
         "groupId": "com.google.guava",
         "artifactId": "guava",
         "version": "33.4.5-android",
-        "nugetVersion": "33.4.5-android",
+        "nugetVersion": "33.4.5",
         "nugetId": "Xamarin.Google.Guava",
         "excludedRuntimeDependencies": "com.google.guava.listenablefuture",
         "type": "androidlibrary",
