--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -333,7 +333,9 @@
     <AndroidNamespaceReplacement Include='signalgeneration' Replacement='SignalGeneration' />
     <AndroidNamespaceReplacement Include='recaptchabase' Replacement='RecaptchaBase' />
     <AndroidNamespaceReplacement Include='viewtree' Replacement='ViewTree' />
-
+    <AndroidNamespaceReplacement Include='restorecredential' Replacement='RestoreCredential' />
+    <AndroidNamespaceReplacement Include='identitycredentials' Replacement='IdentityCredentials' />
+    
   </ItemGroup>
 
 </Project>
