preview version fixed according to review

--- a/config.json
+++ b/config.json
@@ -2663,7 +2663,7 @@
         "groupId": "com.google.android.gms",
         "artifactId": "play-services-identity-credentials",
         "version": "16.0.0-alpha04",
-        "nugetVersion": "116.0.0",
+        "nugetVersion": "116.0.0-alpha04",
         "nugetId": "Xamarin.GooglePlayServices.Identity.Credentials",
         "type": "xbd"
       },
