--- a/config.json
+++ b/config.json
@@ -679,7 +679,8 @@
         "artifactId": "credentials-play-services-auth",
         "version": "1.5.0",
         "nugetVersion": "1.5.0",
-        "nugetId": "Xamarin.AndroidX.Credentials.PlayServicesAuth"
+        "nugetId": "Xamarin.AndroidX.Credentials.PlayServicesAuth",
+        "allowPrereleaseDependencies": true
       },
       {
         "groupId": "androidx.cursoradapter",
