--- a/util/Xamarin.AndroidBinderator/Xamarin.AndroidBinderator/Xamarin.AndroidBinderator.csproj
+++ b/util/Xamarin.AndroidBinderator/Xamarin.AndroidBinderator/Xamarin.AndroidBinderator.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFrameworks>net8.0</TargetFrameworks>
         <LangVersion>12.0</LangVersion>
         <PreserveCompilationContext>true</PreserveCompilationContext>
         <RootNamespace>AndroidBinderator</RootNamespace>
@@ -25,7 +25,7 @@
 
     <ItemGroup>
         <PackageReference Include="RazorLight" Version="2.3.1" />
-        <PackageReference Include="System.Text.Json" Version="6.0.10" />
+        <PackageReference Include="System.Text.Json" Version="9.0.4" />
         <PackageReference Include="MavenNet" Version="2.2.14" />
     </ItemGroup>
 
