--- a/util/Xamarin.AndroidBinderator/Xamarin.AndroidBinderator/Xamarin.AndroidBinderator.csproj
+++ b/util/Xamarin.AndroidBinderator/Xamarin.AndroidBinderator/Xamarin.AndroidBinderator.csproj
@@ -35,7 +35,7 @@
 
     <ItemGroup>
       <Reference Include="Java.Interop.Tools.Maven">
-        <HintPath>..\..\..\tools\Microsoft.Android.Sdk.Windows.35.0.0-rc.1.80\tools\Java.Interop.Tools.Maven.dll</HintPath>
+        <HintPath>..\..\..\tools\Microsoft.Android.Sdk.Windows.35.0.61\tools\Java.Interop.Tools.Maven.dll</HintPath>
         <Private>True</Private>
       </Reference>
     </ItemGroup>
