[ci] Remove PR triggers from azure-pipelines.yml (#1133)
PR builds are run out of the public azure-pipelines-public.yml pipeline.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,9 @@
 trigger:
   - main
   - refs/tags/*
-  - dev/*
 
-pr:
-  - main
-  
+pr: none
+
 schedules:
 - cron: '0 0 * * *'
   displayName: Nightly Extended Tests
