Smaller set of changes from #1118 (#1146)
Context: https://github.com/dotnet/android-libraries/pull/1118

Taking a set of unrelated changes we can bring to main.

This will make the diff in #1118 easier to review.

Changes such as:

* `.gitignore`
* Unrelated cake script changes
* Timeout values
* Create `build/scripts/provision-android/provision-android.csproj`

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,10 @@ tools/
 .gradle
 packages/
 externals/
-output/
+output*/
 Resource.designer.cs
-generated/
+generated*/
+data/timings/
 
 # User-specific files
 *.suo
