--- a/azure-pipelines-public.yml
+++ b/azure-pipelines-public.yml
@@ -39,6 +39,7 @@ stages:
         vmImage: macOS-15
       runDotnetNextTest: ${{ parameters.RunDotnetNextTest }}
       use1ESTemplate: false
+      androidSdkRoot: $(Agent.TempDirectory)/android-sdk
 
 - template: build/ci/stage-standard-tests.yml@self
   parameters:
