[ci] Use templates from DevDiv/Xamarin.yaml-templates (#1155)
Context: https://github.com/dotnet/android/commit/8c741263550cc57bafc30193fa61f39b7df019bc

Updates the repo reference that provides common yaml templates from

  * https://github.com/xamarin/yaml-templates

to

  * https://devdiv.visualstudio.com/DevDiv/_git/Xamarin.yaml-templates

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,15 +31,18 @@ resources:
       type: git
       name: 1ESPipelineTemplates/1ESPipelineTemplates
       ref: refs/tags/release
-    - repository: internal-templates
-      type: github
-      name: xamarin/yaml-templates
-      endpoint: xamarin
+    - repository: yaml-templates
+      type: git
+      name: DevDiv/Xamarin.yaml-templates
       ref: refs/heads/main
 
 extends:
   template: v1/1ES.Official.PipelineTemplate.yml@1esPipelines
-  parameters:   
+  parameters:
+    sdl:
+      sourceRepositoriesToScan:
+        exclude:
+        - repository: yaml-templates
     pool:
       name: AzurePipelines-EO
       image: 1ESPT-Windows2022
