Weekly Stable Updates 20250519 (#1145)
Fixes: https://github.com/dotnet/android-libraries/pull/1145

Updated:

   1. `androidx.annotation:annotation-experimental` - 1.4.1 -> 1.5.0
   2. `androidx.customview:customview` - 1.1.0 -> 1.2.0
   3. `androidx.customview:customview-poolingcontainer` - 1.0.0 -> 1.1.0
   4. `androidx.databinding:databinding-adapters` - 8.9.1 -> 8.10.0
   5. `androidx.databinding:databinding-common` - 8.9.1 -> 8.10.0
   6. `androidx.databinding:databinding-runtime` - 8.9.1 -> 8.10.0
   7. `androidx.databinding:viewbinding` - 8.9.1 -> 8.10.0
   8. `androidx.datastore:datastore` - 1.1.4 -> 1.1.6
   9. `androidx.datastore:datastore-android` - 1.1.4 -> 1.1.6
  10. `androidx.datastore:datastore-core` - 1.1.4 -> 1.1.6
  11. `androidx.datastore:datastore-core-android` - 1.1.4 -> 1.1.6
  12. `androidx.datastore:datastore-core-jvm` - 1.1.4 -> 1.1.6
  13. `androidx.datastore:datastore-core-okio` - 1.1.4 -> 1.1.6
  14. `androidx.datastore:datastore-core-okio-jvm` - 1.1.4 -> 1.1.6
  15. `androidx.datastore:datastore-preferences` - 1.1.4 -> 1.1.6
  16. `androidx.datastore:datastore-preferences-android` - 1.1.4 -> 1.1.6
  17. `androidx.datastore:datastore-preferences-core` - 1.1.4 -> 1.1.6
  18. `androidx.datastore:datastore-preferences-corejvm` - 1.1.4 -> 1.1.6
  19. `androidx.datastore:datastore-preferences-external-protobuf` - 1.1.4 -> 1.1.6
  20. `androidx.datastore:datastore-preferences-proto` - 1.1.4 -> 1.1.6
  21. `androidx.datastore:datastore-rxjava2` - 1.1.4 -> 1.1.6
  22. `androidx.datastore:datastore-rxjava3` - 1.1.4 -> 1.1.6
  23. `androidx.documentfile:documentfile` - 1.0.1 -> 1.1.0
  24. `androidx.exifinterface:exifinterface` - 1.4.0 -> 1.4.1
  25. `androidx.leanback:leanback` - 1.0.0 -> 1.2.0
  26. `androidx.lifecycle:lifecycle-common` - 2.8.7 -> 2.9.0
  27. `androidx.lifecycle:lifecycle-common-java8` - 2.8.7 -> 2.9.0
  28. `androidx.lifecycle:lifecycle-common-jvm` - 2.8.7 -> 2.9.0
  29. `androidx.lifecycle:lifecycle-livedata` - 2.8.7 -> 2.9.0

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -340,6 +340,13 @@
     <AndroidNamespaceReplacement Include='insets' Replacement='Insets' />
     <AndroidNamespaceReplacement Include='signatureverification' Replacement='SignatureVerification' />
     
+
+    <AndroidNamespaceReplacement Include='admanager' Replacement='AdManager' />
+    <AndroidNamespaceReplacement Include='appopen' Replacement='AppOpen' />
+    <AndroidNamespaceReplacement Include='NativeAd' Replacement='NativeAd' />
+    <AndroidNamespaceReplacement Include='rewardedinterstitial' Replacement='RewardedInterstitial' />
+    <AndroidNamespaceReplacement Include='autocomplete' Replacement='AutoComplete' />
+    
   </ItemGroup>
 
 </Project>
