--- a/tests/common/NuGet.config
+++ b/tests/common/NuGet.config
@@ -46,6 +46,9 @@
             
             <!-- Need the unstable version from NuGet -->
             <package pattern="Xamarin.AndroidX.Security.SecurityCrypto" />
+
+            <package pattern="*" />
+
         </packageSource>
     </packageSourceMapping>
     
