--- a/config.json
+++ b/config.json
@@ -2065,26 +2065,24 @@
       },
       {
         "groupId": "androidx.window",
-        "artifactId": "window-extensions",
-        "version": "1.0.0-alpha01",
-        "nugetVersion": "1.0.0.28-alpha01",
-        "nugetId": "Xamarin.AndroidX.Window.WindowExtensions"
-      },
-      {
-        "groupId": "androidx.window",
         "artifactId": "window-core",
         "version": "1.4.0",
         "nugetVersion": "1.4.0",
-        "nugetId": "Xamarin.AndroidX.Window.WindowCore",
-        "dependencyOnly": false
+        "nugetId": "Xamarin.AndroidX.Window.WindowCore"
       },
       {
         "groupId": "androidx.window",
         "artifactId": "window-core-jvm",
         "version": "1.4.0",
         "nugetVersion": "1.4.0",
-        "nugetId": "Xamarin.AndroidX.Window.WindowCore.Jvm",
-        "dependencyOnly": false
+        "nugetId": "Xamarin.AndroidX.Window.WindowCore.Jvm"
+      },
+      {
+        "groupId": "androidx.window",
+        "artifactId": "window-extensions",
+        "version": "1.0.0-alpha01",
+        "nugetVersion": "1.0.0.28-alpha01",
+        "nugetId": "Xamarin.AndroidX.Window.WindowExtensions"
       },
       {
         "groupId": "androidx.window",
@@ -2704,8 +2702,8 @@
       {
         "groupId": "com.google.android.gms",
         "artifactId": "play-services-games-v2",
-        "version": "20.1.2",
-        "nugetVersion": "120.1.2.6",
+        "version": "21.0.0",
+        "nugetVersion": "121.0.0",
         "nugetId": "Xamarin.GooglePlayServices.Games.V2",
         "type": "xbd"
       },
@@ -4700,8 +4698,8 @@
       {
         "groupId": "org.jetbrains.kotlin",
         "artifactId": "kotlin-android-extensions-runtime",
-        "version": "2.1.21",
-        "nugetVersion": "2.1.21",
+        "version": "2.2.0",
+        "nugetVersion": "2.2.0",
         "nugetId": "Xamarin.Kotlin.Android.Extensions.Runtime.Library",
         "type": "androidlibrary",
         "mavenRepositoryType": "MavenCentral"
@@ -4709,8 +4707,8 @@
       {
         "groupId": "org.jetbrains.kotlin",
         "artifactId": "kotlin-parcelize-runtime",
-        "version": "2.1.21",
-        "nugetVersion": "2.1.21",
+        "version": "2.2.0",
+        "nugetVersion": "2.2.0",
         "nugetId": "Xamarin.Kotlin.Parcelize.Runtime",
         "type": "androidlibrary",
         "mavenRepositoryType": "MavenCentral"
@@ -4718,8 +4716,8 @@
       {
         "groupId": "org.jetbrains.kotlin",
         "artifactId": "kotlin-reflect",
-        "version": "2.1.21",
-        "nugetVersion": "2.1.21",
+        "version": "2.2.0",
+        "nugetVersion": "2.2.0",
         "nugetId": "Xamarin.Kotlin.Reflect",
         "type": "androidlibrary",
         "mavenRepositoryType": "MavenCentral",
@@ -4730,8 +4728,8 @@
       {
         "groupId": "org.jetbrains.kotlin",
         "artifactId": "kotlin-stdlib",
-        "version": "2.1.21",
-        "nugetVersion": "2.1.21",
+        "version": "2.2.0",
+        "nugetVersion": "2.2.0",
         "nugetId": "Xamarin.Kotlin.StdLib",
         "type": "androidlibrary",
         "mavenRepositoryType": "MavenCentral"
@@ -4752,8 +4750,8 @@
       {
         "groupId": "org.jetbrains.kotlin",
         "artifactId": "kotlin-stdlib-jdk7",
-        "version": "2.1.21",
-        "nugetVersion": "2.1.21",
+        "version": "2.2.0",
+        "nugetVersion": "2.2.0",
         "nugetId": "Xamarin.Kotlin.StdLib.Jdk7",
         "type": "androidlibrary",
         "mavenRepositoryType": "MavenCentral",
@@ -4764,8 +4762,8 @@
       {
         "groupId": "org.jetbrains.kotlin",
         "artifactId": "kotlin-stdlib-jdk8",
-        "version": "2.1.21",
-        "nugetVersion": "2.1.21",
+        "version": "2.2.0",
+        "nugetVersion": "2.2.0",
         "nugetId": "Xamarin.Kotlin.StdLib.Jdk8",
         "type": "androidlibrary",
         "mavenRepositoryType": "MavenCentral",
