Update the versions used to be .NET 9 and 10  (#1169)
This pull request includes updates to support newer versions of .NET
and Android, removes outdated scripts and configurations, and
simplifies the build pipeline. The most important changes focus on
upgrading target frameworks, cleaning up legacy code, and improving
build configurations.

Updates to support newer versions of .NET and Android:

* `.config/dotnet-tools.json`: Added tools for cake.tool,
  dotnet-test-slicer, and api-tools with specified versions and
  commands.
* `Directory.Build.props`: Updated default target frameworks to
  net9.0-android and added configurations for net10.0-android.
* `BUILDING.md`: Changed the required .NET SDK version from 8.0 to
  9.0.
* `.github/copilot-instructions.md`: Updated references to
  net9.0-android and adjusted API levels in documentation.


Cleanup of legacy scripts and configurations:

* `build.cake`: Removed unused targets and variables related to
  dotnet-next and net10 migrations.
* `build/cake/dotnet-next.cake`: Deleted the script for testing
  preview versions of .NET.
* `build/cake/nuget-install.cake`: Removed the script for downloading
  and managing NuGet packages.

Simplifications in the build pipeline:

* `azure-pipelines-public.yml`: Removed the RunDotnetNextTest
  parameter and its associated logic.
* `azure-pipelines.yml`: Deleted the RunDotnetNextTest parameter and
  its usage across multiple stages.
* These changes collectively streamline the codebase, align the
  project with newer technologies, and remove outdated dependencies
  and configurations.

--- a/.github/ISSUE_TEMPLATE/04-other.yml
+++ b/.github/ISSUE_TEMPLATE/04-other.yml
@@ -14,6 +14,7 @@ body:
       options:
       - net8.0-android
       - net9.0-android
+      - net10.0-android (Preview)
       - Other
     validations:
       required: true
@@ -22,7 +23,7 @@ body:
     attributes:
       label: Affected platform version
       description: Please provide the version number of the platform you see this issue on.
-      placeholder: E.g. VS 2022 17.9.0, .NET 8.0.100, etc.
+      placeholder: E.g. VS 2022 17.14.0, .NET 9.0.100, etc.
     validations:
       required: true
   - type: textarea
