--- a/util/Xamarin.AndroidBinderator/Xamarin.AndroidBinderator/Xamarin.AndroidBinderator.csproj
+++ b/util/Xamarin.AndroidBinderator/Xamarin.AndroidBinderator/Xamarin.AndroidBinderator.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net8.0</TargetFrameworks>
+        <TargetFramework>$(_DefaultNetTargetFramework)</TargetFramework>
         <LangVersion>12.0</LangVersion>
         <PreserveCompilationContext>true</PreserveCompilationContext>
         <RootNamespace>AndroidBinderator</RootNamespace>
