--- a/.github/ISSUE_TEMPLATE/01-use-package.yml
+++ b/.github/ISSUE_TEMPLATE/01-use-package.yml
@@ -15,6 +15,7 @@ body:
       options:
       - net8.0-android
       - net9.0-android
+      - net10.0-android (Preview)
       - Other
     validations:
       required: true
@@ -23,7 +24,7 @@ body:
     attributes:
       label: Affected platform version
       description: Please provide the version number of the platform you see this issue on.
-      placeholder: E.g. VS 2022 17.9.0, .NET 8.0.100, etc.
+      placeholder: E.g. VS 2022 17.14.0, .NET 9.0.100, etc.
     validations:
       required: true
   - type: textarea
