--- a/util/Directory.Build.props
+++ b/util/Directory.Build.props
@@ -1,4 +1,7 @@
 <Project>
   <!-- This Directory.Build.props is to prevent the one in the root from being used,
   which is tuned for building bindings packages. -->
+  <PropertyGroup>
+    <_DefaultNetTargetFramework>net9.0</_DefaultNetTargetFramework>
+  </PropertyGroup>
 </Project>
