[copilot] allow `copilot-setup-steps.yml` to fail (#1193)
We found Copilot can go off track if:

* Copilot commits a build error (of any kind).
* You comment suggesting how to fix the build error.
* Copilot setup steps will now fail, and Copilot can't fix it!

So, once you are in this state, you can't really get Copilot back on
track unless you manually fix it.

Going forward, we should:

* Allow the "build" step to fail
* Upload the logs as an artifact

Copilot should be able to do its work with a failing build.

Other changes:

* Update to .NET 9 / 10.
* This caused disk space to fill!
* To solve this, I made it only build `net9.0-android` on GitHub actions.
* This made the disk usage lower, build time shorter.

--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -13,10 +13,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '8.x'
-
-    - name: Install Cake .NET Tool
-      run: dotnet tool install -g cake.tool
+        dotnet-version: '9.x'
 
     - name: Install Android workload
       run: dotnet workload install android
@@ -27,8 +24,12 @@ jobs:
         distribution: 'microsoft'
         java-version: '11'
 
+    - name: Restore dotnet tools
+      run: dotnet tool restore
+
     - name: Run dotnet cake
       run: dotnet cake
+      continue-on-error: true
 
     - name: Display environment info
       run: |
