[actions] one additional instruction
Updates: `.github\workflows\weekly-stable-updates.yml`

--- a/.github/workflows/weekly-stable-updates.yml
+++ b/.github/workflows/weekly-stable-updates.yml
@@ -36,6 +36,8 @@ jobs:
 
           Commit the changes.
 
+          Build the repo and commit any changes to `PublicApi.*.txt` files.
+
           Lastly, run:
           \`\`\`
           dotnet cake utilities.cake -t=api-diff-markdown-info-pr
